--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -1,18 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title><%= @page_title = "The World Bank - Mapping for Results"+ (@page_subtitle || "") %></title>
-
+    <title><%= @page_title = @page_subtitle + 'The World Bank - Mapping for Results' %></title>
   <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
-  
+    <meta name="description" content="<%= @page.hierarchy.reverse.collect(&:name).join(",") %>,health,poverty,millenium developemnt goals,indicators,development,humanitarian">
+    <meta name="author" content="World Bank">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/mapping.css">
+      
   <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css" />
-  <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css" />
+   <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/style.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/landing.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/assets/css/menu.css" />
 
   <%= partial :javascript %>
 </head>
