--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title><%= @page_title = @page_subtitle + 'The World Bank - Mapping for Results' %></title>
+    <title><%= @page_title = (@page_subtitle || "") + 'The World Bank - Mapping for Results' %></title>
   <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
     <meta name="description" content="<%= @page.hierarchy.reverse.collect(&:name).join(",") %>,health,poverty,millenium developemnt goals,indicators,development,humanitarian">
     <meta name="author" content="World Bank">
