--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -3,7 +3,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title><%= @page_title = (@page_subtitle || "") + 'The World Bank - Mapping for Results' %></title>
     <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
-    <meta name="description" content="<%= @page.hierarchy.reverse.collect {|c| c.name}.join(",") %>,health,poverty,millenium developemnt goals,indicators,development,humanitarian">
+    <meta name="description" content="<%= @page.hierarchy.reverse.collect {|c| c.name}.join(",") %>,health,poverty,millenium development goals,indicators,development,humanitarian">
     <meta name="author" content="World Bank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/mapping.css">
