Fixed Worldmap header link colors

--- a/m4r/public/assets/css/menu.css
+++ b/m4r/public/assets/css/menu.css
@@ -174,6 +174,7 @@
 	background: #7a7979 url('img/sprite.png') no-repeat -281px -364px;
 	color: #fff;
 }
+.worldmenu a, .worldmenu a:visited {color: #989A94}
 /*.dropmenu li a {
     display: block;font-family: Arial, Helvetica, sans-serif; font-size:11px; font-weight:bold; color: #fff; padding:5px; background-color: #97382a;text-decoration: none; background-image:url(../images/btn-dropmenu.gif); background-repeat:no-repeat; border:#5f2017 solid 1px; text-transform:uppercase} */
 .map-options li ul {
