--- a/m4r/views/global_navigation.erb
+++ b/m4r/views/global_navigation.erb
@@ -6,7 +6,7 @@
                 <style type="text/css" media="screen">
                   li.region-option:hover div { display: block; }
                 </style>
-                <% Page.all(:page_type => "region").each do |region_page| %>
+                <% Page.all(:page_type => "region", :order => [:name.desc]).each do |region_page| %>
                 <li class="region-option <%= active_class(region_page, @page) %>"><a href="<%= region_page.url %>"><span><%= region_page.name %></span><% if  active_class(region_page, @page) == "active" %><span class="pointer"></span><% end %></a>
                 
                     <div class="menu-country-options">
