--- a/m4r/views/global_navigation.erb
+++ b/m4r/views/global_navigation.erb
@@ -1,3 +1,4 @@
+<% row_size = 8 %>
               <ul class="worldmenu dropmenu">
                 <li class="first"><a href="javascript:return false;" style="<%= @page[:name].length > 19 ? "padding: 5px 15px 5px 30px;" : 0 %>"><%= @page[:name].upcase %></span></a>
                 <div class="menu-world-options">
@@ -6,14 +7,14 @@
                 <style type="text/css" media="screen">
                   li.region-option:hover div { display: block; }
                 </style>
-                <% Page.all(:page_type => "region", :order => [:name.desc]).each do |region_page| %>
+                <% Page.all(:page_type => "region", :order => [:name.asc]).each do |region_page| %>
                 <li class="region-option <%= active_class(region_page, @page) %>"><a href="<%= region_page.url %>"><span><%= region_page.name %></span><% if  active_class(region_page, @page) == "active" %><span class="pointer"></span><% end %></a>
                 
                     <div class="menu-country-options">
                       <ul class="menu-countries">
                         <% i = 0; region_page.children.each do |country_page| 
                         next if country_page.page_type != "country" %>
-                        <% if i%4 == 0 %><li><% end %><a href="<%= country_page.url %>" class="<%= active_class(country_page, @page) %>"><%= country_page.name %></a><% if (i+1)%4 == 0 || i == (region_page.children.length - 1) %></li><% end %>
+                        <% if i%row_size == 0 %><li><% end %><a href="<%= country_page.url %>" class="<%= active_class(country_page, @page) %>"><%= country_page.name %></a><% if (i+1)%row_size == 0 || i == (region_page.children.length - 1) %></li><% end %>
                         <% i += 1; end %>
                       </ul>
                   </div>
