--- a/m4r/views/global_navigation.erb
+++ b/m4r/views/global_navigation.erb
@@ -1,5 +1,5 @@
               <ul class="worldmenu dropmenu">
-                <li class="first"><a href="javascript:return false;" style="<%= @page[:name].length > 19 ? "padding: 5px 15px 11px 30px;" : 0 %>"><%= @page[:name].upcase %></span></a>
+                <li class="first"><a href="javascript:return false;" style="<%= @page[:name].length > 21 ? "padding: 5px 15px 11px 30px;" : 0 %>"><%= @page[:name].upcase %></span></a>
                 <div class="menu-world-options">
                   <ul class="menu-regions dropmenu_options" id="navmenu" style="">
                 <li class="first"><a href="/">World</a></li>
@@ -7,7 +7,7 @@
                   li.region-option:hover div { display: block; }
                 </style>
                 <% Page.all(:page_type => "region", :order => [:name.asc]).each do |region_page| %>
-                <li class="region-option <%= active_class(region_page, @page) %>"><a href="#<%# region_page.url %>"><span><%= region_page.name %></span><% if  active_class(region_page, @page) == "active" %><span class="pointer"></span><% end %></a>
+                <li class="region-option <%= active_class(region_page, @page) %>"><a href="#<%# region_page.url %>"><span><%= region_page.name %></span><% if  active_class(region_page, @page) == "active" %><span class="pointer" onclick="return false"></span><% end %></a>
                     <div class="menu-country-options">
                       <ul class="menu-countries" style="<%= (region_page.children.length < 4) ? (region_page.children * 125) : '' %>" >
                       <% row_size = (region_page.children.length / 4.0).ceil %>
