--- a/m4r/views/javascript.erb
+++ b/m4r/views/javascript.erb
@@ -13,7 +13,7 @@
 <!-- <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="/js/tmpl.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
-<% if PLATFORM_API_URL =~ /geocommons/ %>
+<% if PLATFORM_API_URL =~ /worldbank/ %>
 <script src="<%= PLATFORM_API_URL %>/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
 <% else %>
 <!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.js"></script> -->
