Chart styling fixes

--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -22,7 +22,7 @@
                 <% if !@page.overview.nil? && @page.overview.length != 0 %>
                 <%= @page.overview %>
                 <% else %>
-                The <strong>Mapping for Results Platform</strong> provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <br /><a class="readmore" href="/about">Read More »</a>
+                The <strong>Mapping for Results Platform</strong> provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <br />Prior to the Spring Meetings 2011, Mapping for Results has identified more than 1250 active Bank financed activities working in 16,520 locations. These activities are a subset of more than 2,500 active financed Bank activities with a volume of more than $160 billion.<br /><a class="readmore" href="/about">Read More »</a>
               <% end %>
               </div>
               </div>
