--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -182,7 +182,7 @@
     border-left: 1px solid #D9DBCD;
     border-right: 1px solid #D9DBCD;    
 }
-
+.dropmenu_category { color: #FFF; margin: 2px 0 2px 4px; background-color: #B94737;}
 .dropmenu_options, .menu-country-options {  display: none; }
 .dropmenu li ul.menu-countries { display: block; 
     background: none repeat scroll 0 0 #D9DCCF;
