--- a/m4r/views/javascript.erb
+++ b/m4r/views/javascript.erb
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
+
   <script type="text/javascript" src="/js/jquery-1.js"></script>
     <script type="text/javascript" charset="utf-8">
     var jq = jQuery.noConflict();
